tests/fixtures/invalid/resources/views/invalid-helper.blade.php
<?php

{{ config('app.invalid_key') }}
